--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -30,11 +30,10 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="23dp"
         android:ems="10"
+        android:hint="Group Name"
         android:inputType="textPersonName"
-        android:text="Group name"
         app:layout_constraintBottom_toTopOf="@+id/addbtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
