--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -8,7 +8,7 @@
     tools:layout_editor_absoluteY="81dp">
 
     <Button
-        android:id="@+id/addbtn"
+        android:id="@+id/joinbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -26,16 +26,12 @@
         android:id="@+id/editTextJoin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="23dp"
         android:layout_marginBottom="23dp"
         android:ems="10"
+        android:hint="Group Name"
         android:inputType="textPersonName"
-        android:text="Group name"
-        app:layout_constraintBottom_toTopOf="@+id/addbtn"
+        app:layout_constraintBottom_toTopOf="@+id/joinbtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.348"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
