--- a/app/src/main/res/layout/activity_vote.xml
+++ b/app/src/main/res/layout/activity_vote.xml
@@ -10,8 +10,34 @@
         android:id="@+id/rv_vote"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/group_id_label_tv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+    <TextView
+        android:id="@+id/group_id_label_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/your_group_id_label"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/rv_vote"
+        app:layout_constraintBottom_toTopOf="@id/group_id_tv"
+        android:layout_margin="0dp"
+        android:padding="0dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/group_id_tv"
+        android:text="@string/default_group_id"
+        android:textSize="120sp"
+        app:layout_constraintTop_toBottomOf="@id/group_id_label_tv"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:gravity="center"
+        android:layout_margin="0dp"
+        android:padding="0dp"/>
+
 </android.support.constraint.ConstraintLayout>
