--- a/app/src/main/res/layout/item_option.xml
+++ b/app/src/main/res/layout/item_option.xml
@@ -9,9 +9,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/tv_option_name"
         android:text="Default option name"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp" />
+        android:layout_margin="16dp" />
 
 </LinearLayout>
