--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -5,35 +5,49 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AddActivity"
-    tools:layout_editor_absoluteY="81dp">
+    tools:layout_editor_absoluteY="81dp"
+    android:background="@color/colorPrimary">
+
+    <TextView
+        android:id="@+id/tv_label_create_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:text="@string/enter_a_name_for_your_group"
+        app:layout_constraintBottom_toTopOf="@+id/editTextCreate"
+        app:layout_constraintEnd_toEndOf="@+id/editTextCreate"
+        app:layout_constraintStart_toStartOf="@+id/editTextCreate"
+        android:gravity="center"
+        android:textColor="#FFFFFF"/>
 
     <Button
         android:id="@+id/createbtn"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="13dp"
-        android:text="Create"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextCreate"
-
-        />
+        android:layout_marginStart="8dp"
+        android:background="@drawable/rounded_light_buttons"
+        android:textColor="#FFFFFF"
+        android:text="@string/create_a_room"
+        app:layout_constraintEnd_toEndOf="@+id/editTextCreate"
+        app:layout_constraintStart_toStartOf="@+id/editTextCreate"
+        app:layout_constraintTop_toBottomOf="@+id/editTextCreate" />
 
     <EditText
         android:id="@+id/editTextCreate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="23dp"
+        android:layout_marginTop="90dp"
         android:ems="10"
-        android:hint="Group Name"
         android:inputType="textPersonName"
+        android:shadowColor="#FFFFFF"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/createbtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
