--- a/app/src/main/res/layout/activity_vote.xml
+++ b/app/src/main/res/layout/activity_vote.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".VoteActivity">
 
+    <TextView
+        android:id="@+id/tv_instructions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/instructions"
+        android:textSize="16sp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textStyle="italic"
+        android:layout_margin="10dp"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_vote"
         android:layout_width="0dp"
@@ -13,8 +24,7 @@
         app:layout_constraintBottom_toTopOf="@id/group_id_label_tv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toBottomOf="@id/tv_instructions" />
 
     <TextView
         android:id="@+id/group_id_label_tv"
