--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -28,9 +28,10 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/rounded_light_buttons"
-        android:textColor="#FFFFFF"
         android:text="@string/create_a_room"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="@+id/editTextCreate"
         app:layout_constraintStart_toStartOf="@+id/editTextCreate"
         app:layout_constraintTop_toBottomOf="@+id/editTextCreate" />
