Small UI Improvments

--- a/app/src/main/res/layout/item_option.xml
+++ b/app/src/main/res/layout/item_option.xml
@@ -4,6 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_drag_handle"
+        android:layout_gravity="center_vertical"
+        android:paddingStart="8dp"
+        android:paddingLeft="8dp" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
