--- a/app/src/main/res/layout/activity_vote.xml
+++ b/app/src/main/res/layout/activity_vote.xml
@@ -24,7 +24,9 @@
         app:layout_constraintBottom_toTopOf="@id/group_id_label_tv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_instructions" />
+        app:layout_constraintTop_toBottomOf="@id/tv_instructions"
+        android:overScrollMode="never"
+        android:scrollbars="vertical"/>
 
     <TextView
         android:id="@+id/group_id_label_tv"
