--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".Results">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/and_the_winner_is"
+        android:textSize="16sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tv_winner"
+        android:id="@+id/tv_winner_label"
+        android:layout_marginTop="10dp"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_results"
         android:layout_width="0dp"
@@ -13,5 +24,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tv_winner"
+        android:layout_marginTop="20dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/default_winner"
+        android:textSize="40sp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_winner_label"
+        app:layout_constraintBottom_toTopOf="@id/rv_results"
+        android:id="@+id/tv_winner"/>
+
+
 </android.support.constraint.ConstraintLayout>
