CreateActivity UI improvements

--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -12,12 +12,7 @@
         android:id="@+id/tv_label_create_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="98dp"
-        android:layout_marginLeft="98dp"
-        android:layout_marginTop="98dp"
-        android:layout_marginEnd="112dp"
-        android:layout_marginRight="112dp"
-        android:layout_marginBottom="3dp"
+        android:layout_marginTop="80dp"
         android:gravity="center"
         android:text="@string/enter_a_name_for_your_group"
         android:textColor="#FFFFFF"
@@ -25,12 +20,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/editTextCreate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
-        android:ems="10"
+        android:width="240dp"
         android:inputType="textPersonName"
         android:shadowColor="#FFFFFF"
         android:textColor="#FFFFFF"
@@ -44,80 +40,35 @@
         android:id="@+id/tv_label_pick_algorithm"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="119dp"
-        android:layout_marginLeft="119dp"
-        android:layout_marginTop="29dp"
-        android:layout_marginEnd="119dp"
-        android:layout_marginRight="119dp"
-        android:layout_marginBottom="39dp"
+        android:layout_marginTop="24dp"
         android:gravity="center"
         android:text="Pick a sorting algorithm"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/algorithmbtn1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextCreate" />
-    <Button
-        android:id="@+id/algorithmbtn1"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/rounded_light_buttons"
-        android:text="exhaustive algorithm"
-        android:textColor="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="@+id/tv_label_pick_algorithm"
-        app:layout_constraintStart_toStartOf="@+id/tv_label_pick_algorithm"
-        app:layout_constraintTop_toBottomOf="@+id/tv_label_pick_algorithm" />
-    <Button
-        android:id="@+id/algorithmbtn2"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="120dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/rounded_light_buttons"
-        android:text="sorting algorithm"
-        android:textColor="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="@+id/tv_label_pick_algorithm"
-        app:layout_constraintStart_toStartOf="@+id/tv_label_pick_algorithm"
-        app:layout_constraintTop_toBottomOf="@+id/tv_label_pick_algorithm" />
 
     <Button
         android:id="@+id/createbtn"
-        android:layout_width="200dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="76dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginRight="60dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/rounded_light_buttons"
         android:text="@string/create_a_room"
         android:textColor="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="@+id/algorithmbtn1"
-        app:layout_constraintHorizontal_bias="0.718"
-        app:layout_constraintStart_toStartOf="@+id/algorithmbtn1"
-        app:layout_constraintTop_toBottomOf="@+id/algorithmbtn1" />
-
+        app:layout_constraintEnd_toEndOf="@+id/editTextCreate"
+        app:layout_constraintStart_toStartOf="@+id/editTextCreate"
+        app:layout_constraintTop_toBottomOf="@+id/algSpinner" />
 
 
     <Spinner
         android:id="@+id/algSpinner"
-        android:layout_width="368dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="180dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/createbtn" />
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="@id/editTextCreate"
+        app:layout_constraintStart_toStartOf="@id/editTextCreate"
+        app:layout_constraintTop_toBottomOf="@+id/tv_label_pick_algorithm"
+        />
 
 </android.support.constraint.ConstraintLayout>
