--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -24,10 +24,6 @@
         android:id="@+id/joinbtn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/rounded_light_buttons"
         android:text="@string/join_a_room"
@@ -43,12 +39,13 @@
         android:layout_marginTop="90dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:shadowColor="#FFFFFF"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/joinbtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/rounded_edit_text"
+        android:paddingVertical="10dp"
+        android:paddingHorizontal="12dp"
+        android:gravity="center_horizontal"/>
 
 </android.support.constraint.ConstraintLayout>
