--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -12,7 +12,7 @@
         android:id="@+id/tv_label_add_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="12dp"
         android:text="@string/please_enter_the_name_of_the_option"
         app:layout_constraintBottom_toTopOf="@+id/et_add"
         app:layout_constraintEnd_toEndOf="@+id/et_add"
@@ -24,10 +24,6 @@
         android:id="@+id/add_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/rounded_light_buttons"
         android:text="@string/add_option"
@@ -40,15 +36,16 @@
         android:id="@+id/et_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingVertical="10dp"
         android:layout_marginTop="90dp"
-        android:width="240dp"
+        android:width="220dp"
         android:inputType="textPersonName"
-        android:shadowColor="#FFFFFF"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@id/add_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/rounded_edit_text"
+        android:paddingHorizontal="12dp"
+        />
 
 </android.support.constraint.ConstraintLayout>
